Lago-K8S/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: front
